--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -40,6 +40,15 @@
 {{- end }}
 
 <header class="header">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WZ9J1RMWN1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-WZ9J1RMWN1');
+    </script>
     <nav class="nav">
         <div class="logo">
             {{- $label_text := (site.Params.label.text | default site.Title) }}
